--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 27
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.pethoalpar.androidtesstwoocr"
         minSdkVersion 14
-        targetSdkVersion 24
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -30,9 +30,12 @@ dependencies {
     })
 
     implementation project(':scanlibrary')
-    implementation 'com.android.support:appcompat-v7:24.1.1'
-    implementation 'com.android.support:support-v4:24.0.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.rmtheis:tess-two:8.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // Permission
+    implementation 'com.karumi:dexter:5.0.0'
 }
